--- a/style.css
+++ b/style.css
@@ -1,10 +1,15 @@
-.inner-container {
-    width: 60%;
-    height: 150px;
+#main {
+    text-align: center;
+    /* vw = view width. entire page = 100vw*/
+    padding-left: 15vw;
+    padding-right: 15vw;
+    gap: 20px;
 }
 
-.input:focus {
-    outline: none;
+.container {
+    padding: 15px;
+    border-radius: 20px;
+    justify-content: center;
 }
 
 .col {
@@ -17,6 +22,33 @@
     flex-direction: row;
 }
 
+.flex-center {
+    justify-content: center;
+}
+
+.page-divider {
+    width: 100%;
+}
+
+.inner-container {
+    width: 60%;
+    height: 150px;
+}
+
+.input:focus {
+    outline: none;
+}
+
+#editor {
+    border: 1px solid black;
+}
+
+#input {
+    border: 0;
+    width: 100%;
+    height: 95%;
+}
+
 #send-note-container {
     text-align: right;
 }
@@ -27,20 +59,13 @@
     cursor: pointer;
 }
 
-#editor {
-    border: 1px solid black;
-
-}
-
-#input {
-    border: 0;
-    width: 100%;
-    height: 95%;
-}
-
 #notes {
     margin: 0;
     padding: 0;
+}
+
+#notes-header {
+    gap: 10px;
 }
 
 /* style all the list element within notes*/
